ch7/tests/fails/return_result.stderr
error: this macro can only be applied to a function that doesn't return a result. Signature: Result < Person, String >
 --> tests/fails/return_result.rs:9:1
  |
9 | fn create_person_with_result(age: u8, name: String) -> Result<Person, String> {
  | ^^
